Fix: List progress bar visiblity

--- a/packages/components/src/styles/components/stepper/list.scss
+++ b/packages/components/src/styles/components/stepper/list.scss
@@ -32,6 +32,7 @@ $hds-stepper-list-step-padding-bottom: 16px;
         position: absolute;
         top: 1px;
         left: 11px;
+        z-index: -1;
         width: 2px;
         content: "";
       }
@@ -42,7 +43,6 @@ $hds-stepper-list-step-padding-bottom: 16px;
       }
 
       &::after {
-        z-index: -1;
         background-color: var(--token-color-palette-neutral-700);
       }
     }
@@ -51,6 +51,7 @@ $hds-stepper-list-step-padding-bottom: 16px;
 
 .hds-stepper-list__step-progress {
   position: relative;
+  z-index: 0;
 }
 
 .hds-stepper-list__step-text {
